--- a/pls.html
+++ b/pls.html
@@ -36,7 +36,7 @@
             <p id = "pizza">click</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/sjPM8oGxA5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
         <center>
-            <a>pls</a>
+            <a color = "black">pls</a>
             <button><a href = "https://superai.me/" target="_blank"> click </a></button>
             <image src = "pos/123.png.jpg">
             <form action="test.php", method="POST">
