--- a/public/link.html
+++ b/public/link.html
@@ -12,5 +12,6 @@
         <a href="test.php">test.php</a>
         <a href="save_text.txt">save_text.txt</a>
         <a href="https://music.youtube.com/watch?v=CvMV-U2T4OM&feature=share">music</a>
+        <a href="https://music.youtube.com/watch?v=CvMV-U2T4OM&feature=share">music1</a>
     </body>
 </html>
