--- a/testtttt.html
+++ b/testtttt.html
@@ -8,7 +8,31 @@
   </head>
   <body><iframe src="https://discord.com/widget?id=890275795073925230&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></body>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-layers @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-data @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-cpu @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-gl @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-nodejs @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-cuda @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgpu @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-xla @latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-kernels @latest"></script>
+
+
   <script>
+    const model = tf.sequential();
+    model.add(tf.layers.dense({units: 1, inputShape: [1]}));
+    model.compile({loss: 'meanSquaredError', optimizer: 'sgd'});
+    const xs = tf.tensor2d([1, 2, 3, 4], [4, 1]);
+    const ys = tf.tensor2d([1, 3, 5, 7], [4, 1]);
+    model.fit(xs, ys, {epochs: 100}).then(() => {
+      model.predict(tf.tensor2d([3], [1, 1])).print();
+    });
       const a = tf.tensor2d([1,2,3,4],[1,4])
       alert([a])
     Promise.resolve(a).then(
